[project]
name = "photoutils"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tom Shafer", email = "tom@tshafer.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyexiftool>=0.5.6",
    "typer-slim>=0.15.4",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
]
interactive = [
    "jupyter>=1.1.1",
]

[project.scripts]
photoutils = "photoutils.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["B", "S", "I", "ANN", "C4", "FA", "RUF", "UP", "D"]
extend-ignore = ["UP038"]

[tool.mypy]
ignore_missing_imports = true
